# neurosnap

./: create_docs.py  pyproject.toml
example_notebooks/: ClusterProt.ipynb  api.ipynb  plots_and_animations.ipynb
src/neurosnap/: api.py  conformers.py  msa.py
src/neurosnap/algos/: alphafold.py
