[build-system]
requires = ["setuptools>=59.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurosnap"
version = "0.0.62"
authors = [
  {name="Keaun Amani"},
]
description = "Collection of useful bioinformatic functions and tools for various computational biology pipelines."
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: CC BY 4.0 License",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
]
requires-python = ">=3.8"
dependencies = [
  "requests>2",
  "numpy>1.0.0",
  "pandas",
  "biopython",
  "rdkit",
  "scipy",
  "matplotlib",
  "tabulate",
  # "rdkit-pypi", # can switch this if "rdkit" does not work
]

[project.optional-dependencies]
dev = [
    "sphinx==8.1.3",
    "sphinx-rtd-theme>=1.0",  # Read the Docs theme
    "sphinx-autodoc-typehints",  # For better type hint support
    "myst-parser"  # For Markdown support (optional)
]

[project.urls]
Homepage = "https://github.com/NeurosnapInc/neurosnap"
Issues = "https://github.com/NeurosnapInc/neurosnap/issues"
